# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "fastapi-quanttide-iam"
version = "0.1.0-alpha.1"
description = "FastAPI SDK for Quanttide Identity and Access Management"
authors = [
    {name = "QuantTide Inc.", email = "opensource@quanttide.com"},
    {name = "Guo Zhang", email = "zhangguo@quanttide.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache License, Version 2.0",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.109.2",
    "pydantic>=2.6.1",
    "sqlalchemy>=2.0.25",
]

[project.urls]
Homepage = "https://github.com/quanttide/fastapi-quanttide-iam"
Documentation = "https://github.com/quanttide/fastapi-quanttide-iam"
Repository = "https://github.com/quanttide/fastapi-quanttide-iam.git"
Issues = "https://github.com/quanttide/fastapi-quanttide-iam/issues"
Changelog = "https://github.com/quanttide/fastapi-quanttide-iam/blob/main/CHANGELOG.md"

[tool.pdm.build]
includes = [
    "fastapi_quanttide_iam",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
]
